[package]
name = "RUST_BACKEND"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.49.0", features = ["full"] }
